added an about page with a questionairre using react multi-step form next step is to render the data into a portfolio page and display the information

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -171,4 +171,4 @@ p {
 
 .img-small {
   width: 180px;
-}
+} */
